--- a/static/css/page2.css
+++ b/static/css/page2.css
@@ -1,14 +1,17 @@
+.topbar {
+  margin-top: 5%;
+  margin-bottom: 2%;
+  padding: 1.2rem;
+}
+.main-body {
+  margin-top: 2%;
+  padding: 2%;
+}
+.ylblk {
+  margin: 2% 1%;
+  padding: 3.5%;
+}
 
-.topbar{
-    margin-top: 5%;
-    margin-bottom: 2%;
-    padding: 1.2rem;
-}
-.main-body{
-    margin-top: 2%;
-    padding: 2%;
-}
-.ylblk{
-    margin: 2% 1%;
-    padding: 3.5%;
+.secondpara {
+  margin-top: 10%;
 }
