--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,50 @@
 
 {% block head %}
 
+<link rel="stylesheet" href={{ url_for('static',  filename='css/index.css') }}>
 <title>First Page</title>
 
 {% endblock %}
 
 {% block body %}
 
-<h1>Hello World</h1>
+<div id="header">
+    <div>
+        <h1>What's going on? Help us understand you</h1>
+    </div>
+    <div>
+        <p>Answer the following questions honestly and we will help you live a life full of purpose and fullfillment</p>
+    </div>
+</div>
 
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width slides/quotes -->
+    <div class="mySlides">
+      <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
+      <p class="author">- John Keats</p>
+    </div>
+  
+    <div class="mySlides">
+      <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
+      <p class="author">- Ernest Hemingway</p>
+    </div>
+  
+    <div class="mySlides">
+      <q>I have not failed. I've just found 10,000 ways that won't work.</q>
+      <p class="author">- Thomas A. Edison</p>
+    </div>
+  
+    <!-- Next/prev buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  
+  <!-- Dots/bullets/indicators -->
+  <div class="dot-container">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
 {% endblock %} 
