--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 
 {% block head %}
 
-<link rel="stylesheet" href={{ url_for('static',  filename='css/index.css') }}>
+<link rel="stylesheet"
+href={{ url_for('static',filename='css/index.css') }}>
 <title>First Page</title>
 
 {% endblock %}
