--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,38 +1,24 @@
-#header2 {
-  margin-left: 20px;
+.topbar {
+  margin-top: 1%;
+  margin-bottom: 2%;
+  padding: 1.2rem;
 }
 
-body h1 {
-  font-size: 200px;
-}
 /* Slideshow container */
 .slideshow-container {
   position: relative;
   background: #f1f1f1f1;
+  margin-top: 5%;
 }
 
 /* Slides */
-.mySlides {
+/* .mySlides {
   display: none;
   padding: 80px;
   text-align: center;
-}
+} */
 
 /* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  color: #888;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
 
 /* Position the "next button" to the right */
 .next {
@@ -41,18 +27,20 @@ body h1 {
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
 }
-
+.question {
+  padding-top: 4%;
+}
 /* The dot/bullet/indicator container */
 .dot-container {
   text-align: center;
   padding: 20px;
   background: #ddd;
+  margin-bottom: 2%;
 }
 
 /* The dots/bullets/indicators */
