--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,7 +26,15 @@
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
+textarea {
+  width: 400px;
+  height: 100px;
+  background-color: white;
+  margin-top: 5%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 15px;
+}
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
@@ -34,6 +42,9 @@
 }
 .question {
   padding-top: 4%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 15px;
 }
 /* The dot/bullet/indicator container */
 .dot-container {
