--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@ url_for('static',filename='css/index.css') }}>
         <h3 class="flow-text">What's going on? Help us understand you</h3>
         <p></p>
       </div>
-
       <div>
         <p>
           Answer the following questions honestly and may be able to help you
@@ -25,46 +24,46 @@ url_for('static',filename='css/index.css') }}>
     <div class="pink lighten-5 slideshow-container container">
       <div class="container question mySlides">
         <q> Let's start with your name! </q>
-        <input class="" id="q1" type="text" />
+        <textarea class="" id="q1" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q>How do you feel about your academic performance lately? </q>
-        <input class="" id="q2" type="text" />
+        <textarea class="" id="q2" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q> How has lockdown been for you? Don't hold back :) Let it out </q>
-        <input class="" id="q3" type="text" />
+        <textarea class="" id="q3" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q> How's your home environment like? Are you comfortable? </q>
-        <input class="" id="q4" type="text" />
+        <textarea class="" id="q4" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q> What do you do to relieve yourself from academic stress?</q>
-        <input class="" id="q5" type="text" />
+        <textarea class="" id="q5" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q>How's your social circle? Do you have a vent-out buddy? </q>
-        <input class="" id="q6" type="text" />
+        <textarea class="" id="q6" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q> What do you looking forward to everyday you wake up? </q>
-        <input class="" id="q7" type="text" />
+        <textarea class="" id="q7" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q> Anything else you want to share? We'd be glad to hear you out! </q>
-        <input id="q8" type="text" />
+        <textarea class="" id="q8" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q> What do you think limits / binds you ? </q>
-        <input class="" id="q9" type="text" />
+        <textarea class="" id="q9" type="text"></textarea>
       </div>
       <div class="container question mySlides">
         <q>
           Have you ever experienced fear or judgement or any other thing of that
           sort ?
         </q>
-        <input class="" id="q10" type="text" />
+        <textarea class="" id="q10" type="text"></textarea>
       </div>
     </div>
 
