--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,7 +27,7 @@
   border-radius: 3px 0 0 3px;
 }
 textarea {
-  width: 400px;
+  width: 100%;
   height: 100px;
   background-color: white;
   margin-top: 5%;
@@ -81,4 +81,18 @@ q {
 /* Add a blue color to the author */
 .author {
   color: cornflowerblue;
+}
+
+body h3{
+  font-family: Quicksand;
+  font-size: 50px;
+}
+
+body p{
+  font-family: Quicksand;
+  font-size: 20px;
+}
+
+.slide1{
+  background-color: #FFE8E8;
 }
