--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,19 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href={{ url_for('static',filename='css/nav.css') }}>
     {% block head %}{% endblock %}
 
 </head>
 <body>
+    <nav>
+        <div class="nav-wrapper yellow">
+          <a href="#" class="brand-logo">Logo</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          </ul>
+        </div>
+    </nav>
 {% block body %}{% endblock %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
