--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,10 @@ url_for('static',filename='css/index.css') }}>
 <title>First Page</title>
 
 {% endblock head %} {% block body %}
-<div class="container">
-  <div class="z-depth-2 yellow center topbar text-flow">Title Here</div>
-  <div class="container">
+
     <div class="container">
       <div>
-        <h3 class="flow-text">What's going on? Help us understand you</h3>
+        <h3 class="heading">What's going on? Help us understand you</h3>
         <p></p>
       </div>
       <div>
@@ -20,55 +18,58 @@ url_for('static',filename='css/index.css') }}>
           puny wave :)
         </p>
       </div>
-    </div>
-    <div class="pink lighten-5 slideshow-container container">
+
+<form action="/result" method="POST">
+    <div class="yellow lighten-4 slideshow-container container">
       <div class="container question mySlides">
         <q> Let's start with your name! </q>
-        <textarea class="" id="q1" type="text"></textarea>
+        <textarea class="" id="q1" type="text" name="q1"></textarea>
       </div>
       <div class="container question mySlides">
         <q>How do you feel about your academic performance lately? </q>
-        <textarea class="" id="q2" type="text"></textarea>
+        <textarea class="" id="q2" type="text" name="q2"></textarea>
       </div>
       <div class="container question mySlides">
         <q> How has lockdown been for you? Don't hold back :) Let it out </q>
-        <textarea class="" id="q3" type="text"></textarea>
+        <textarea class="" id="q3" type="text" name="q3"></textarea>
       </div>
       <div class="container question mySlides">
         <q> How's your home environment like? Are you comfortable? </q>
-        <textarea class="" id="q4" type="text"></textarea>
+        <textarea class="" id="q4" type="text" name="q4"></textarea>
       </div>
       <div class="container question mySlides">
         <q> What do you do to relieve yourself from academic stress?</q>
-        <textarea class="" id="q5" type="text"></textarea>
+        <textarea class="" id="q5" type="text" name="q5"></textarea>
       </div>
       <div class="container question mySlides">
         <q>How's your social circle? Do you have a vent-out buddy? </q>
-        <textarea class="" id="q6" type="text"></textarea>
+        <textarea class="" id="q6" type="text" name="q6"></textarea>
       </div>
       <div class="container question mySlides">
         <q> What do you looking forward to everyday you wake up? </q>
-        <textarea class="" id="q7" type="text"></textarea>
+        <textarea class="" id="q7" type="text" name="q7"></textarea>
       </div>
       <div class="container question mySlides">
         <q> Anything else you want to share? We'd be glad to hear you out! </q>
-        <textarea class="" id="q8" type="text"></textarea>
+        <textarea class="" id="q8" type="text" name="q8"></textarea>
       </div>
       <div class="container question mySlides">
         <q> What do you think limits / binds you ? </q>
-        <textarea class="" id="q9" type="text"></textarea>
+        <textarea class="" id="q9" type="text" name="q9"></textarea>
       </div>
       <div class="container question mySlides">
         <q>
           Have you ever experienced fear or judgement or any other thing of that
           sort ?
         </q>
-        <textarea class="" id="q10" type="text"></textarea>
+        <textarea class="" id="q10" type="text" name="q10"></textarea>
+        <input type="submit">
       </div>
     </div>
+</form>
 
     <!-- Dots/bullets/indicators -->
-    <div class="pink lighten-5 dot-container container">
+    <div class="yellow lighten-4 dot-container container">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(4)"></span>
