Submit and Prev Hide

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,6 @@ url_for('static',filename='css/index.css') }}>
           sort ?
         </q>
         <textarea class="" id="q10" type="text" name="q10"></textarea>
-        <input type="submit">
       </div>
     </div>
 </form>
@@ -82,11 +81,13 @@ url_for('static',filename='css/index.css') }}>
     </div>
     <div class="container">
       <a
+      id="prevbtn"
         onclick="plusSlides(-1)"
         class="yellow black-text waves-effect waves-light btn"
         ><i class="material-icons left">skip_previous </i>Back</a
       >
       <a
+        id="nextbtn"
         onclick="plusSlides(1)"
         class="yellow black-text right waves-effect waves-light btn"
         ><i class="material-icons right">skip_next</i>Next</a
