ML model integrated

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 <body>
     <nav>
         <div class="nav-wrapper yellow">
-          <a href="#" class="brand-logo">Logo</a>
+          <a href="#" class="brand-logo" id="logo">Mind.ai</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
           </ul>
         </div>
