--- a/static/css/page2.css
+++ b/static/css/page2.css
@@ -15,3 +15,24 @@
 .secondpara {
   margin-top: 10%;
 }
+
+body h4{
+  font-family: Quicksand;
+  font-size: 50px;
+}
+
+body h2{
+  font-family: Quicksand;
+  font-size: 40px;
+}
+
+body p{
+  font-family: Quicksand;
+  font-size: 20px;
+}
+
+#back {
+  color: white;
+  height: 30px;
+  width: 60px;
+}
