--- a/templates/Result.html
+++ b/templates/Result.html
@@ -3,53 +3,25 @@ href={{url_for('static',filename='css/page2.css')}}> {% endblock head%} {% block
 body %}
 <div class="row container main-body z-depth-3">
   <div class="yellow  ylblk">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam nihil maiores
-    non ad sit? Aliquam neque cupiditate laboriosam rerum soluta hic natus
-    voluptates sint ratione libero laborum voluptatum saepe, fugit qui itaque
-    inventore nulla unde, dignissimos reprehenderit voluptatem? Iure saepe
-    consequuntur assumenda debitis odit possimus beatae veritatis optio, sit,
-    aperiam voluptates ea sint! Vel non cumque neque dolorum ab necessitatibus
-    tenetur accusamus dolore natus! Atque ut obcaecati voluptatem cupiditate
-    similique, quo commodi quae aspernatur id laborum dolor ex sapiente officia
-    ratione esse sequi accusantium odio delectus porro illum aperiam tempora
-    alias. Excepturi iste aperiam sit praesentium reprehenderit molestias
-    dignissimos sunt? Officia eligendi ut blanditiis veritatis dicta quasi
-    aspernatur quisquam itaque hic dolorem esse voluptatem earum eos repellat
-    odit ipsum, consequuntur necessitatibus voluptates, quia maxime dolor. Aut
-    dignissimos deserunt et dolorum, tempora atque sapiente porro reprehenderit
-    debitis vitae cumque. Ab et impedit necessitatibus suscipit ad nobis
-    laudantium cumque eveniet, aliquam beatae? Molestiae maxime dolorum labore
-    et voluptatum. Aliquid accusamus ab similique maxime facere consequatur
-    consequuntur mollitia sed ratione eaque, nobis recusandae possimus non est
-    delectus blanditiis debitis enim amet harum iste nulla alias distinctio!
-    Numquam alias, aspernatur accusantium quibusdam impedit beatae tenetur neque
-    perferendis. Animi eligendi laboriosam et, doloribus aut ipsa, eaque iusto
-    explicabo expedita exercitationem necessitatibus asperiores. Fugit
-    perferendis quidem laudantium enim quae a minima, temporibus vero. Eius
-    quibusdam labore quae excepturi ea officia laborum
+    <h4>Your well being score is {{score}}/10</h4>
+    <p>{{Summary}}</p>
     <div class="secondpara">
-      <p>
-        <h3>Our Suggestions</h3> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Tempore blanditiis, eius inventore nulla itaque, vitae repudiandae
-        quidem veniam eaque porro modi iure veritatis! Reiciendis maxime fuga
-        atque, debitis odit ducimus natus, quia, non deleniti tempora dolor
-        sunt. Voluptas ex culpa magnam aut, assumenda voluptatum laborum esse
-        aliquid mollitia officia ipsa! Architecto placeat ab eveniet, similique
-        reprehenderit ipsa, itaque, soluta repudiandae provident aut voluptates
-        consequuntur fugiat ratione? Culpa maxime nulla id voluptatem eum
-        dolorum nihil voluptates qui quis et reprehenderit, sequi provident
-        praesentium!
-      </p>
+      <h2>To live a better life we recommend...</h2> 
+        <p>
+          {{rec}}
+        </p>
     </div>
-    consequuntur. Quam, ut fugit!
   </div>
   <div class="center">
-    <a
-      href="#"
-      class="btn-small waves-effect waves-light brown darken-4 white-text"
-    >
-      Back</a
-    >
+    <form action="/" method="GET">
+      <!-- <button><a
+        href="#"
+        class="btn-small waves-effect waves-light brown darken-4 white-text"
+      >
+        Back</a
+      ></button> -->
+      <input type="submit" class="brown" value="BACK" id="back">
+    </form>
   </div>
 </div>
 {% endblock body %}
